namespace SafeVault.Domain.Enums;

public enum AccessLevel
{
    Read = 1,
    ReadWrite = 2
}
