namespace SafeVault.Domain.Enums;

public enum DocumentClassification
{
    Public = 1,
    Internal = 2,
    Confidential = 3,
    Restricted = 4
}
