namespace SafeVault.Domain.Enums;

public enum UserRole
{
    Admin = 1,
    Manager = 2,
    Viewer = 3
}
